Fixed page layout (hidden overflow) so that scrollbar now appears

--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -19,11 +19,9 @@ body, html, button, input {
 #page-container {
 	background-color: #202020;
 	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
+	flex-direction: column;
 	height: 100%;
 	width: 100%;
-	overflow: hidden;
 }
 
 #top-bar {
@@ -33,8 +31,12 @@ body, html, button, input {
 	flex-direction: row;
 }
 
+#main-container {
+	display: flex;
+	flex: 1;
+}
+
 #navigation-bar {
-	height: 100%;
 	width: 200px;
 	display: flex;
 	flex-direction: column;
@@ -221,12 +223,11 @@ body, html, button, input {
 
 #content {
 	box-shadow: #202020 -5px 0 16px -7px;
-	height: 100%;
-	width: 100%;
 	flex: 1;
 	background-color: #f5f5f5;
 	border-radius: 15pt 0 0 0;
 	padding: 15px;
+	overflow: auto;
 }
 
 .super-section {
